--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Dancing+Script:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Dancing+Script:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -15,7 +15,7 @@
 
         /* Color */
         --color-primary: 253 121 168;
-        --color-black: 99 110 114;
+        --color-dark: 99 110 114;
     }
 
     /* Google font icon */
@@ -47,11 +47,11 @@
 
 @layer components {
     .my-container {
-        @apply w-full px-4;
+        @apply w-full px-4 lg:px-10 xl:max-w-screen-xl xl:mx-auto xl:px-0;
     }
 
     .my-container-item-full {
-        @apply w-screen relative -left-4 overflow-x-scroll;
+        @apply w-screen relative -left-4 overflow-x-scroll md:w-full md:left-0 md:overflow-hidden;
     }
 
     .bullet {
