--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,14 @@
     ::-webkit-scrollbar-thumb:hover {
         background: #ff508e;
     }
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 0 8px rgb(var(--color-primary) / 0.1);
+        border-radius: 10px;
+    }
+
+    ::-ms-reveal {
+        filter: invert(1);
+    }
 }
 
 @layer components {
@@ -55,7 +63,7 @@
     }
 
     .my-container-full {
-        @apply w-[calc(100vw-var(--scrollbar-width))] relative overflow-x-scroll left-1/2 -translate-x-1/2 lg:w-full;
+        @apply w-[calc(100vw-var(--scrollbar-width))] relative overflow-x-auto left-1/2 -translate-x-1/2 lg:w-full;
     }
 
     .bullet {
