--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Dancing+Script:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -19,6 +19,124 @@
         --color-dark: 99 110 114;
     }
 
+    /* Thin */
+    @font-face {
+        font-family: Poppins;
+        font-weight: 100;
+        font-style: normal;
+        src: url('./assets/fonts/poppins/Poppins-Thin.otf');
+    }
+    @font-face {
+        font-family: Poppins;
+        font-weight: 100;
+        font-style: italic;
+        src: url('./assets/fonts/poppins/Poppins-ThinItalic.otf');
+    }
+    /* Extralight */
+    @font-face {
+        font-family: Poppins;
+        font-weight: 200;
+        font-style: normal;
+        src: url('./assets/fonts/poppins/Poppins-ExtraLight.otf');
+    }
+    @font-face {
+        font-family: Poppins;
+        font-weight: 200;
+        font-style: italic;
+        src: url('./assets/fonts/poppins/Poppins-ExtraLightItalic.otf');
+    }
+    /* Light */
+    @font-face {
+        font-family: Poppins;
+        font-weight: 300;
+        font-style: normal;
+        src: url('./assets/fonts/poppins/Poppins-Light.otf');
+    }
+    @font-face {
+        font-family: Poppins;
+        font-weight: 300;
+        font-style: italic;
+        src: url('./assets/fonts/poppins/Poppins-LightItalic.otf');
+    }
+    /* Normal */
+    @font-face {
+        font-family: Poppins;
+        font-weight: 400;
+        font-style: normal;
+        src: url('./assets/fonts/poppins/Poppins-Regular.otf');
+    }
+    @font-face {
+        font-family: Poppins;
+        font-weight: 400;
+        font-style: italic;
+        src: url('./assets/fonts/poppins/Poppins-Italic.otf');
+    }
+    /* Medium */
+    @font-face {
+        font-family: Poppins;
+        font-weight: 500;
+        font-style: normal;
+        src: url('./assets/fonts/poppins/Poppins-Medium.otf');
+    }
+    @font-face {
+        font-family: Poppins;
+        font-weight: 500;
+        font-style: italic;
+        src: url('./assets/fonts/poppins/Poppins-MediumItalic.otf');
+    }
+    /* Semibold */
+    @font-face {
+        font-family: Poppins;
+        font-weight: 600;
+        font-style: normal;
+        src: url('./assets/fonts/poppins/Poppins-SemiBold.otf');
+    }
+    @font-face {
+        font-family: Poppins;
+        font-weight: 600;
+        font-style: italic;
+        src: url('./assets/fonts/poppins/Poppins-SemiBoldItalic.otf');
+    }
+    /* Bold */
+    @font-face {
+        font-family: Poppins;
+        font-weight: 700;
+        font-style: normal;
+        src: url('./assets/fonts/poppins/Poppins-Bold.otf');
+    }
+    @font-face {
+        font-family: Poppins;
+        font-weight: 700;
+        font-style: italic;
+        src: url('./assets/fonts/poppins/Poppins-BoldItalic.otf');
+    }
+    /* Extrabold */
+    @font-face {
+        font-family: Poppins;
+        font-weight: 800;
+        font-style: normal;
+        src: url('./assets/fonts/poppins/Poppins-ExtraBold.otf');
+    }
+    @font-face {
+        font-family: Poppins;
+        font-weight: 800;
+        font-style: italic;
+        src: url('./assets/fonts/poppins/Poppins-ExtraBoldItalic.otf');
+    }
+    /* Black */
+    @font-face {
+        font-family: Poppins;
+        font-weight: 900;
+        font-style: normal;
+        src: url('./assets/fonts/poppins/Poppins-Black.otf');
+    }
+    @font-face {
+        font-family: Poppins;
+        font-weight: 900;
+        font-style: italic;
+        src: url('./assets/fonts/poppins/Poppins-BlackItalic.otf');
+    }
+
     /* Google font icon */
     .material-symbols-outlined {
         font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 40;
@@ -30,9 +148,8 @@
     body {
         -webkit-tap-highlight-color: transparent;
         user-select: none;
-        font-family: 'Nunito', sans-serif;
+        font-family: Poppins, sans-serif;
         color: rgb(var(--color-dark) / 1);
-        /* background-color: theme(colors.slate.100); */
     }
 
     /* Scroll bar */
@@ -51,7 +168,7 @@
         box-shadow: inset 0 0 0 8px rgb(var(--color-primary) / 0.1);
         border-radius: 10px;
     }
-
+    /* Show/hide password */
     ::-ms-reveal {
         filter: invert(1);
     }
