--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,6 @@
         --color-dark: 99 110 114;
     }
 
-    /* Thin */
     /* @font-face {
         font-family: Poppins;
         font-weight: 100;
@@ -70,10 +69,10 @@
 }
 
 @layer components {
+    /* Container */
     .my-container {
-        @apply mx-auto px-4 max-w-7xl sm:px-6 md:px-8;
+        @apply mx-auto px-2 max-w-7xl sm:px-6 md:px-8;
     }
-
     .my-container-full {
         @apply w-[calc(100vw-var(--scrollbar-width))] relative overflow-x-auto left-1/2 -translate-x-1/2 lg:w-full;
     }
@@ -86,6 +85,14 @@
         @apply inline-block mx-0.5 p-[3px] rounded-full bg-primary bg-opacity-50 duration-700;
     }
     .bullet-active {
-        @apply py-[3px] px-[10px];
+        @apply py-[3px] px-2.5;
+    }
+
+    /* Swiper - Thumbs */
+    .swiper-thumbs {
+        @apply w-[300px] m-auto;
+    }
+    .swiper-slide-thumb-active {
+        @apply border-primary;
     }
 }
